portfolio/programming/CPP/workspace_all/.metadata/.plugins/org.eclipse.cdt.ui/ex.15-13.build.log
15:14:54 **** Build of configuration Debug for project ex.15-13 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../ex.15-13.cpp
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ex.15-13.d" -MT"ex.15-13.o" -o "ex.15-13.o" "../ex.15-13.cpp"
../ex.15-13.cpp:12:2: error: unknown type name 'ifint'
        ifint value = 1;
        ^
../ex.15-13.cpp:22:13: warning: illegal character encoding in string literal [-Winvalid-source-encoding]
                cout << "2<C0><C7> 3<BD><C2><C0><BA> " << v << "<C0>Դϴ<D9>." << endl;
                          ^~~~~~~~  ~~~~~~~~~~~~~~~~
../ex.15-13.cpp:22:33: warning: illegal character encoding in string literal [-Winvalid-source-encoding]
                cout << "2<C0><C7> 3<BD><C2><C0><BA> " << v << "<C0>Դϴ<D9>." << endl;
                                                                ^~~~  ~~~~
../ex.15-13.cpp:25:17: warning: illegal character encoding in string literal [-Winvalid-source-encoding]
        cout << "2<C0><C7> 3<BD><C2><C0><BA> " << v << "<C0>Դϴ<D9>." << endl;
                  ^~~~~~~~  ~~~~~~~~~~~~~~~~
../ex.15-13.cpp:25:37: warning: illegal character encoding in string literal [-Winvalid-source-encoding]
        cout << "2<C0><C7> 3<BD><C2><C0><BA> " << v << "<C0>Դϴ<D9>." << endl;
                                                        ^~~~  ~~~~
../ex.15-13.cpp:29:3: error: use of undeclared identifier 'delet'
                delet [] s;
                ^
../ex.15-13.cpp:29:10: error: expected expression
                delet [] s;
                       ^
4 warnings and 3 errors generated.
make: *** [ex.15-13.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

15:14:55 Build Failed. 4 errors, 4 warnings. (took 949ms)

